--- a/style.css
+++ b/style.css
@@ -9,8 +9,6 @@
 
 .QuestView .quest-nav-button-container {
     text-align : center;
-    /* width : 70%; */
-    /* margin : 0 auto; */
     padding-top : 2.5%
 } 
 
@@ -37,6 +35,7 @@
 }
 
 .QuestView .quest-resource-img {
+    display : flex;
     height : 32px;
     margin-bottom : 0;
     margin-top : auto;
