--- a/style.css
+++ b/style.css
@@ -71,9 +71,22 @@
     text-overflow : ellipsis;
 }
 
-.QuestView .quest-type-img {
-    padding-right : 5px;
+.QuestView .quest-type-info {
+    padding-right : 10px;
     align-self : center;
+    display : flex;
+    flex-direction : column;
+    text-align : center;
+}
+
+.QuestView .quest-type-info div {
+    margin : 5px 0px;
+    background-color : transparent;
+    height : 16px;
+}
+
+.QuestView .quest-type-info .label {
+    background-color : transparent;
 }
 
 .QuestView .quest-resource-img {
